# CmakeDynamicLibrary

./: .gitignore  CMakeLists.txt  README.md  hello-world.cpp  生成库批处理-在新文件夹例如build下运行.bat  生成库批处理-直接双击运行即可.bat
TestMode/: CrossPlatformLoad.h  IMessage.h  Interface.hpp  head.h  hello-world.cpp
class/TestMode/: Interface.hpp  head.h
class/message/: Message.cpp
message/: CMakeLists.txt  Message.cpp
message/include/: Message.hpp
